# Teams-to-AI

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: __init__.py  __main__.py  attachments.py  auth.py  cli.py  config.py  config_manager.py  cpd_agent.py  cpd_context.py  cpd_intent.py  exceptions.py  file_sharing.py  graph_client.py  language_guard.py  llm_client.py  llm_prompts.py  logging_config.py  main.py  mcp_client.py  message_parser.py  pdf_export.py  reply_intent.py  repository.py  schemas.py  teams_attachments.py  teams_service.py  teams_targets.py  worker.py
docs/: POWER_AUTOMATE_ANLEITUNG.md
scripts/: check_ollama.ps1  start.ps1  test.ps1
tests/: __init__.py  test_attachments.py  test_auth_scopes.py  test_chat_mode.py  test_config_manager.py  test_cpd_mcp.py  test_file_sharing.py  test_graph_client.py  test_llm_client.py  test_message_parser.py  test_multi_targets.py  test_no_backlog.py  test_pdf_replies.py  test_repository.py  test_worker_filters.py
